fix: MainMenu close icon was invisible

--- a/src/scss/MainMenu.scss
+++ b/src/scss/MainMenu.scss
@@ -341,7 +341,7 @@
 		width: prem(137);
 		height: prem(145);
 
-		font-size: prem(16);
+		color: $var--color-suld-200;
 
 		padding-top: prem(65);
 		padding-left: prem(32);
